--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,7 +160,7 @@ en:
   wsubtitle_html: <font color="bf0a30"><h4 style="font-family:Calibri"><strong>**Ask about our Website Development Service for your business by D&G Global to link your business with Ontario's Only to maximize your clients.**</strong></h4></font>
         <p class="lead"></p>
   contact_html: <h4 style="font-family:Calibri"><strong>Contact Us:</strong></h4>
-  about_html: <h4 style="font-family:Calibri"> <strong> About Us:</strong></h4><h6>Ontario's Only is an online marketing company that offers proffessional advertising service to all real estate professionals in the province of Ontario Canada.</h6>
+  about_html: <h4 style="font-family:Calibri"> <strong> About Us:</strong></h4><h6>Ontario's Only is an online marketing company that offers professional advertising service to all real estate professionals in the province of Ontario Canada.</h6>
   companyinfo: ENTER YOUR COMPANY INFORMATION
   follow_html: <h4 style="font-family:Calibri"><strong>FOLLOW US<strong></h4>
   jumbotron_title_html: <h2>Advertise Real Estate Services</h2>
