--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -211,7 +211,7 @@ en:
   jumbotron_poolcleanertitle_html: <h2>Pool Cleaning Services</h2>
   jumbotron_poolrepairtitle_html: <h2>Pool Repair Services</h2>
   jumbotron_privatebanktitle_html: <h2>Banks Services</h2>
-  jumbotron_privatefirmtitle_html: <h2>Private Firms Services</h2>
+  jumbotron_privatefirmtitle_html: <h2>Real Estate Services</h2>
   jumbotron_propertymanagetitle_html: <h2>Property Management Firms</h2>
   jumbotron_realestatetitle_html: <h2>Real Estate Firms</h2>
   jumbotron_realtortitle_html: <h2>Realtors</h2>
